Rendu Final de la Version 3

--- a/index3.html
+++ b/index3.html
@@ -20,19 +20,53 @@
 <link rel="stylesheet" type="text/css" href="style.css" media="all" />
 
 <link rel="stylesheet" href="knacss.css">
+<link rel="stylesheet" href="bootstrap.css">
+
+<script src="jquery-3.3.1.js"></script>
+<script src="bootstrap.js"></script>
+<script src="popper.js"></script>
 
 	</head>
 
 	<body>
 	<script src="script.js"></script>
 <header>
-
+<br></br>
 	<center> <h1> <img <img src="http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png" left="30%" width="120px" height="80px/"> La Technologie de demain - la réalité virtuelle</h1> </center> 
 
 </header>
 
 
 <center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png width=100% /></center>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top background-color : #808080;">
+ 
+  <a class="navbar-brand href="#"></a>
+
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="index.html">Développement</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="index1.html">Histoire</a>
+    </li>
+	 <li class="nav-item">
+      <a class="nav-link" href="index2.html">Notice</a>
+    </li>
+	<li class="nav-item">
+       <a class="nav-link" href="index5.html">Art</a>
+    </li>
+	<li class="nav-item">
+      <a class="nav-link" href="index4.html">Cardboard</a>
+    </li>
+	<li class="nav-item">
+      <a class="nav-link" href="index3.html">Auteurs</a>
+    </li>
+
+ 
+      </a>
+    </li>
+  </ul>
+</nav>
 
 
 
@@ -40,63 +74,58 @@
 <br><element1></br>
 <center>
 <img src=http://image.noelshack.com/fichiers/2018/42/1/1539598245-clemchev.png width=25% height=auto /> <img src=http://image.noelshack.com/fichiers/2018/42/1/1539598252-cng.png width=25% height=auto />
-
-<br><p>Clément    |   Clément </p></br>
-
-<br><p>     Chevreuil  | Noncher-Gillet</p> </br> 
-
-<br><p> 18 ans     |   19 ans</p></br>
-
-<br><p> Bac STI2D     				|   Bac ES (option Sciences Sociales et Politiques)</p></br>
-
-<br><p> Nous avons réalisé notre tout premier site dans le cadre de de notre projet durant notre premier semestre de BTS SIO.</p></br>
+<br> </br>
+Noncher-Gillet Clément : <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+  Afficher Profil
+</button>
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Noncher-Gillet Clément</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        19 ans, Bac ES, BTS SIO Première Année.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+      </div>
+    </div>
+  </div>
+</div>
+<br> </br>
+Chevreuil Clément : <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+  Afficher Profil
+</button>
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Chevreuil Clément</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        18 ans, Bac STI2D, BTS SIO Première Année.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+      </div>
+    </div>
+  </div>
+</div>
  </center>
+ <br> </br>
 </element1>
-
-
-
-	 
 
 <element2>
 <center> <a href="#"><p><i class="icon-arrow--up"></i></p></a> </center>
 </element2>
 
-
-
-
-<nav>
-	<div class="table">
-	
-	<ul>
-	<li class "menu-exp">
-	<a href="index.html">Accueil</a>
-	</li>
-	<br> </br>
-	<li class "menu-ind">
-	<a href="index1.html">Définition et Histoire</a>
-	</li>
-	<br> </br>
-	<li class "menu-exp">
-	<a href="index2.html">Notice</a>
-	</li>
-	<br> </br>
-	<br> </br>
-	<li class "menu-exp">
-	<a href="index3.html">Auteurs</a>
-	</li>
-	<br> </br>
-	<li class "menu-exp">
-	<a href="index4.html">Google Cardboard</a>
-	</li>
-	<li class "menu-hob">
-	<a href="index5.html">L'Art Numérique</a>
-	</li>
-	
-	</ul>
-	
-	</div>
-	</nav>
- 
 
 
 
