--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 <link rel="stylesheet" type="text/css" href="style.css" media="all" />
 
 <link rel="stylesheet" href="knacss.css">
+<link rel="stylesheet" href="bootstrap.css">
+
+<script src="jquery-3.3.1.js"></script>
+<script src="bootstrap.js"></script>
+<script src="popper.js"></script>
 
 
 	</head>
@@ -28,12 +33,41 @@
 <script src="script.js"></script>
 
 <header>
-
+<br></br>
 	<center> <h1> <img <img src="http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png" left="30%" width="120px" height="80px/"> La Technologie de demain - la réalité virtuelle</h1> </center> 
 
 </header>
 
 <center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png width=100%  /></center>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top background-color : #808080" >
+ 
+  <a class="navbar-brand href="#"></a>
+
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="index.html">Développement</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="index1.html">Histoire</a>
+    </li>
+	 <li class="nav-item">
+      <a class="nav-link" href="index2.html">Notice</a>
+    </li>
+	<li class="nav-item">
+      <a class="nav-link" href="index5.html">Art</a>
+    </li>
+	<li class="nav-item">
+      <a class="nav-link" href="index4.html">Cardboard</a>
+    </li>
+	<li class="nav-item">
+      <a class="nav-link" href="index3.html">Auteurs</a>
+    </li>
+
+ 
+      </a>
+    </li>
+  </ul>
+</nav>
 
 
 <br><element1></br>
@@ -64,44 +98,7 @@ Il existe de nombreux langages de programmation utilisés pour développer des a
 <element2>
 <center> <a href="#"><p><i class="icon-arrow--up"></i></p></a> </center>
 </element2>
-
-
-
-<!-- <center> -->
-<nav>
-	<div class="table">
-	
-	<ul>
-	
-	<li class "menu-ind">
-	<a href="index.html">Accueil</a>
-	</li>
-	<br> </br>
-	<li class "menu-exp">
-	<a href="index1.html">Définition et Histoire</a>
-	</li>
-	<br> </br>
-	<li class "menu-exp">
-	<a href="index2.html">Notice</a>
-	</li>
-	<br> </br>
-	<br> </br>
-	<li class "menu-exp">
-	<a href="index3.html">Auteurs</a>
-	</li>
-	<br> </br>
-	<li class "menu-exp">
-	<a href="index4.html">Google Cardboard</a>
-	</li>
-	<li class "menu-hob">
-	<a href="index5.html">L'Art Numérique</a>
-	</li>
-	
-	</ul>
-	
-	</div>
-	</nav>
- </center>
+</center>
 
 
 
