--- a/index4.html
+++ b/index4.html
@@ -20,18 +20,54 @@
 <link rel="stylesheet" type="text/css" href="style.css" media="all" />
 
 <link rel="stylesheet" href="knacss.css">
+<link rel="stylesheet" href="bootstrap.css">
+
+<script src="jquery-3.3.1.js"></script>
+<script src="bootstrap.js"></script>
+<script src="popper.js"></script>
 	</head>
 
 	<body>
+
 	<script src="script.js"></script>
 <header>
-
+<br></br>
 	<center> <h1> <img <img src="http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png" left="30%" width="120px" height="80px/"> La Technologie de demain - la réalité virtuelle</h1> </center> 
 
 </header>
 
 
 <center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png width=100% /></center>
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top background-color : #808080;">
+ 
+  <a class="navbar-brand href="#"></a>
+
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="index.html">Développement</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="index1.html">Histoire</a>
+    </li>
+	 <li class="nav-item">
+      <a class="nav-link" href="index2.html">Notice</a>
+    </li>
+	<li class="nav-item">
+       <a class="nav-link" href="index5.html">Art</a>
+    </li>
+	<li class="nav-item">
+      <a class="nav-link" href="index4.html">Cardboard</a>
+    </li>
+	<li class="nav-item">
+      <a class="nav-link" href="index3.html">Auteurs</a>
+    </li>
+
+ 
+      </a>
+    </li>
+  </ul>
+</nav>
 
 
 
@@ -47,7 +83,35 @@ utilisant les services de Google Cardboard. Il suffit de télécharger l’appli
 lorsque l’on lance une application compatible avec Google Cardboards, l’affichage sur l’écran se voit séparé en deux parties, ce qui est parfaitement adapté pour les casques Google Cardboards.
 Des capteurs se trouvant dans le téléphone permettront que l’application suive le mouvement de notre tête (head-tracking), afin d’être pleinement immergé dans l’environnement dans lequel nous sommes 
 virtuellement.</p>
-<center><img src=http://image.noelshack.com/fichiers/2018/47/1/1542619550-googlegc2.png></center>
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+  </ul>
+  
+
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <center><img src="http://image.noelshack.com/fichiers/2018/47/1/1542619550-googlegc2.png"  width=50% height=500px></center>
+    </div>
+    <div class="carousel-item">
+      <center><img src="http://image.noelshack.com/fichiers/2018/49/2/1543913842-telechargement.jpg"  width=50% height=500px></center>
+    </div>
+    <div class="carousel-item">
+      <center><img src="http://image.noelshack.com/fichiers/2018/49/2/1543914049-cardboard-viewer-cropped.png"  width=50% height=500px></center>
+    </div>
+  </div>
+  
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
 <p>
 <br> </br>
 <B> Comment développer une application Cardboard? </B>
@@ -83,38 +147,7 @@ Même si l’on pousse la programmation d’une application au maximum, les tél
 
 
 
-<nav>
-	<div class="table">
-	
-	<ul>
-	<li class "menu-hob">
-	<a href="index.html">Accueil</a>
-	</li>
-	<br> </br>
-	<li class "menu-ind">
-	<a href="index1.html">Définition et Histoire</a>
-	</li>
-	<br> </br>
-	<li class "menu-exp">
-	<a href="index2.html">Notice</a>
-	</li>
-	<br> </br>
-	<br> </br>
-	<li class "menu-exp">
-	<a href="index3.html">Auteurs</a>
-	</li>
-	<br> </br>
-	<li class "menu-exp">
-	<a href="index4.html">Google Cardboard</a>
-	</li>
-	<li class "menu-hob">
-	<a href="index5.html">L'Art Numérique</a>
-	</li>
-	
-	</ul>
-	
-	</div>
-	</nav>
+
  
 
 </body>
