--- a/index5.html
+++ b/index5.html
@@ -20,20 +20,53 @@
 <link rel="stylesheet" type="text/css" href="style.css" media="all" />
 
 <link rel="stylesheet" href="knacss.css">
+<link rel="stylesheet" href="bootstrap.css">
+
+<script src="jquery-3.3.1.js"></script>
+<script src="bootstrap.js"></script>
+<script src="popper.js"></script>
 
 	</head>
 
 	<body>
 	<script src="script.js"></script>
 <header>
-
+<br></br>
 	<center> <h1> <img <img src="http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png" left="30%" width="120px" height="80px/"> La Technologie de demain - la réalité virtuelle</h1> </center> 
 
 </header>
 
 
 <center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png width=100% /></center>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top background-color : #808080;">
+ 
+  <a class="navbar-brand href="#"></a>
 
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="index.html">Développement</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="index1.html">Histoire</a>
+    </li>
+	 <li class="nav-item">
+      <a class="nav-link" href="index2.html">Notice</a>
+    </li>
+	<li class="nav-item">
+       <a class="nav-link" href="index5.html">Art</a>
+    </li>
+	<li class="nav-item">
+      <a class="nav-link" href="index4.html">Cardboard</a>
+    </li>
+	<li class="nav-item">
+      <a class="nav-link" href="index3.html">Auteurs</a>
+    </li>
+
+ 
+      </a>
+    </li>
+  </ul>
+</nav>
 
 
 
@@ -50,19 +83,46 @@ moderne s'est instauré grâce aux technologies de réalité virtuelle. Des arti
 oeuvres en VR peuvent se glisser entre les tableaux simplement accrochés aux murs. En effet, un artiste nommé Jon Rafman a été reconnu à l'exposition au "New Museum Triennial"
 pour son oeuvre retranscrivant un serpent via la VR. Cette exposition n'est pas la seule à s'investir dans l'art numérique, il y a par exemple également "Art Basel"
 ou bien même "Zabludowicz Collection". Comme dit précédémment, le fait que l'art soit en VR peut paraître anodin, mais le fait que celui qui observe l'oeuvre soit complètement
-immergé dans l'oeuvre donne un sentiment de rapproche de l'oeuvre pour celui qui visionne, ce qui peut toucher plus profondément spirituellement l'observateur.
+immergé dans l'oeuvre donne un sentiment de rapproche de l'oeuvre pour celui qui visionne, ce qui peut toucher plus profondément spirituellement l'observateur.</p>
+
+<br> </br>
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+  </ul>
+  
+
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <center><img src="http://image.noelshack.com/fichiers/2018/48/1/1543226944-serpentjonvr.jpg"  width=50% height=500px></center>
+    </div>
+    <div class="carousel-item">
+      <center><img src="http://image.noelshack.com/fichiers/2018/49/2/1543914196-20170307indianavr.jpg"  width=50% height=500px></center>
+    </div>
+    <div class="carousel-item">
+      <center><img src="http://image.noelshack.com/fichiers/2018/49/2/1543914236-1480941152-383f2e84531e891d6c6baf005323c65d-1038x576.jpg"  width=50% height=500px></center>
+    </div>
+  </div>
+  
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
+
 
 <br> </br>
 
-<img src=http://image.noelshack.com/fichiers/2018/48/1/1543226944-serpentjonvr.jpg />
-
-
+<p><B> Comment faire de l'art numérique ?</B></p>
 <br> </br>
 
-<B> Comment faire de l'art numérique ?</B>
-<br> </br>
-
-Des applications dédiées aux artistes ou à ceux voulant le devenir ont même été développées, notamment "Tilt Brush", une application développée par Google compatible avec
+<p>Des applications dédiées aux artistes ou à ceux voulant le devenir ont même été développées, notamment "Tilt Brush", une application développée par Google compatible avec
 l'HTC Vive. Ce dernier, lorsque l'on porte un casque transforme virtuellement nos mains en pinceaux et en palette de peinture. Cela peut paraître peut utile, mais il est
 important de préciser que la VR change énormément notre perception, cela peut donc amener à une inspiration nouvelle, moderne, et originale. Tilt Brush n'est pas la seule
 application en son genre, le cinéma étant également en pleine évolution grâce à la VR, une application nommée "Mindshow" existe, ce qui permet à l'utilisateur de se créer
@@ -83,41 +143,6 @@ et qui permettent l'art d'évoluer.
 </element2>
 
 
-
-
-<nav>
-	<div class="table">
-	
-	<ul>
-	
-	<li class "menu-ind">
-	<a href="index.html">Accueil</a>
-	</li>
-	<br> </br>
-	<li class "menu-exp">
-	<a href="index1.html">Définition et Histoire</a>
-	</li>
-	<br> </br>
-	<li class "menu-exp">
-	<a href="index2.html">Notice</a>
-	</li>
-	<br> </br>
-	<br> </br>
-	<li class "menu-exp">
-	<a href="index3.html">Auteurs</a>
-	</li>
-	<br> </br>
-	<li class "menu-exp">
-	<a href="index4.html">Google Cardboard</a>
-	</li>
-	<li class "menu-hob">
-	<a href="index5.html">L'Art Numérique</a>
-	</li>
-	
-	</ul>
-	
-	</div>
-	</nav>
  
 
 
